[metadata]
name = f2s
version = 0.0.1
author = Mirantis Inc.
author-email = product@mirantis.com
summary = Fuel 2 Solar stuff
description-file = README.md
license = Apache-2
home-page = http://mirantis.com
classifier =
     Development Status :: 4 - Beta
     License :: OSI Approved :: Apache Software License
     Programming Language :: Python
     Programming Language :: Python :: 2.7
     Topic :: System :: Software Distribution
keywords =
    deployment

[files]
packages = f2s

[entry_points]
console_scripts =
    f2s = f2s.f2s:main
    fsclient = f2s.fsclient:main

